fix(core/select): constrain tags-input width to prevent overflow in multiple mode

--- a/packages/core/src/select/_select-styles.scss
+++ b/packages/core/src/select/_select-styles.scss
@@ -73,6 +73,8 @@
     min-width: 30%;
 
     input {
+      width: 100%;
+
       /* Hide native search clear button to avoid duplicate clear icon in trigger. */
       &[type='search']::-webkit-search-decoration,
       &[type='search']::-webkit-search-cancel-button,
